@@ -1,0 +1,4 @@
+MIMP is a project to create a version of IMP suitable for small mobile devices
+such as WAP phones or PDAs. Basic IMP functionality is implemented including
+mailbox viewing and paging, viewing messages, deleting, replying, forwarding,
+and composing new messages.
