@@ -1,0 +1,21 @@
+===========================================================================
+$NetBSD: MESSAGE,v 1.7 2006/06/16 09:24:36 adrianp Exp $
+
+Please refer to the file:
+
+	${PREFIX}/share/doc/mimp/INSTALL
+
+on how to setup your MIMP installation. You need to at least edit
+
+	${PREFIX}/share/horde/config/registry.php
+
+to enable MIMP in the horde framework.  You will also need to configure MIMP
+by using the Horde administrative interface.
+
+Finally you will also need to make MIMP accessible through your HTTP server.  If
+you are running Apache and ap-php, then you can add the following lines
+to httpd.conf:
+
+	Include ${PKG_SYSCONFDIR}/mimp.conf
+
+===========================================================================
