@@ -1,0 +1,83 @@
+@comment $NetBSD: PLIST,v 1.16 2010/11/10 12:48:31 adam Exp $
+share/doc/mimp/CHANGES
+share/doc/mimp/COPYING
+share/doc/mimp/CREDITS
+share/doc/mimp/INSTALL
+share/doc/mimp/README
+share/doc/mimp/RELEASE_NOTES
+share/doc/mimp/UPGRADING
+share/examples/mimp/mimp.conf
+share/horde/mimp/compose.php
+share/horde/mimp/config/conf.xml.dist
+share/horde/mimp/config/menu.php.dist
+share/horde/mimp/config/mime_drivers.php.dist
+share/horde/mimp/config/prefs.php.dist
+share/horde/mimp/folders.php
+share/horde/mimp/index.php
+share/horde/mimp/lib/MIMP.php
+share/horde/mimp/lib/MIME/Contents.php
+share/horde/mimp/lib/MIME/Viewer/alternative.php
+share/horde/mimp/lib/MIME/Viewer/html.php
+share/horde/mimp/lib/MIME/Viewer/multipart.php
+share/horde/mimp/lib/MIME/Viewer/plain.php
+share/horde/mimp/lib/MIME/Viewer/related.php
+share/horde/mimp/lib/MIME/Viewer/status.php
+share/horde/mimp/lib/api.php
+share/horde/mimp/lib/base.php
+share/horde/mimp/lib/version.php
+share/horde/mimp/locale/ca_ES/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/cs_CZ/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/da_DK/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/de_DE/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/es_ES/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/eu_ES/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/fi_FI/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/fr_FR/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/hr_HR/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/hu_HU/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/it_IT/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/ja_JP/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/lt_LT/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/nl_NL/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/pl_PL/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/pt_BR/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/pt_PT/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/ro_RO/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/ru_RU/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/sk_SK/LC_MESSAGES/mimp.mo
+share/horde/mimp/locale/zh_CN/LC_MESSAGES/mimp.mo
+share/horde/mimp/mailbox.php
+share/horde/mimp/message.php
+share/horde/mimp/po/README
+share/horde/mimp/po/ca_ES.po
+share/horde/mimp/po/cs_CZ.po
+share/horde/mimp/po/da_DK.po
+share/horde/mimp/po/de_DE.po
+share/horde/mimp/po/es_ES.po
+share/horde/mimp/po/eu_ES.po
+share/horde/mimp/po/fi_FI.po
+share/horde/mimp/po/fr_FR.po
+share/horde/mimp/po/hr_HR.po
+share/horde/mimp/po/hu_HU.po
+share/horde/mimp/po/mimp.pot
+share/horde/mimp/po/it_IT.po
+share/horde/mimp/po/ja_JP.po
+share/horde/mimp/po/lt_LT.po
+share/horde/mimp/po/nl_NL.po
+share/horde/mimp/po/pl_PL.po
+share/horde/mimp/po/pt_BR.po
+share/horde/mimp/po/pt_PT.po
+share/horde/mimp/po/ro_RO.po
+share/horde/mimp/po/ru_RU.po
+share/horde/mimp/po/sk_SK.po
+share/horde/mimp/po/zh_CN.po
+share/horde/mimp/templates/common-header.inc
+share/horde/mimp/templates/compose/compose.inc
+share/horde/mimp/templates/compose/redirect.inc
+share/horde/mimp/templates/folders/folders.inc
+share/horde/mimp/templates/index/notconfigured.inc
+share/horde/mimp/templates/mailbox/mailbox.inc
+share/horde/mimp/themes/graphics/favicon.ico
+share/horde/mimp/themes/graphics/horde-power2.png
+share/horde/mimp/themes/graphics/horde-power2.wbmp
+share/horde/mimp/themes/graphics/mimp.png
