@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.1 2012/12/09 20:36:40 adam Exp $
+# $NetBSD: Makefile,v 1.2 2012/12/12 20:00:16 asau Exp $
 
-DISTNAME=	django-photologue-2.4
+DISTNAME=	django-photologue-2.5
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	http://pypi.python.org/packages/source/d/django-photologue/
+EXTRACT_SUFX=	.zip
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/jdriscoll/django-photologue/
