@@ -1,4 +1,4 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.1 2012/12/09 20:36:40 adam Exp $
 ${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
 ${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
 ${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
@@ -11,8 +11,36 @@ ${PYSITELIB}/photologue/__init__.pyo
 ${PYSITELIB}/photologue/admin.py
 ${PYSITELIB}/photologue/admin.pyc
 ${PYSITELIB}/photologue/admin.pyo
+${PYSITELIB}/photologue/locale/da/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/da/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/de/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/de/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/en/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/en/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/en_US/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/en_US/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/es_ES/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/es_ES/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/fr/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/fr/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/hu/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/hu/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/it/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/it/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/nl/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/nl/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/no/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/no/LC_MESSAGES/django.po
 ${PYSITELIB}/photologue/locale/pl/LC_MESSAGES/django.mo
 ${PYSITELIB}/photologue/locale/pl/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/pt/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/pt/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/pt_BR/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/pt_BR/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/ru/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/ru/LC_MESSAGES/django.po
+${PYSITELIB}/photologue/locale/tr/LC_MESSAGES/django.mo
+${PYSITELIB}/photologue/locale/tr/LC_MESSAGES/django.po
 ${PYSITELIB}/photologue/management/__init__.py
 ${PYSITELIB}/photologue/management/__init__.pyc
 ${PYSITELIB}/photologue/management/__init__.pyo
@@ -47,9 +75,13 @@ ${PYSITELIB}/photologue/models.py
 ${PYSITELIB}/photologue/models.pyc
 ${PYSITELIB}/photologue/models.pyo
 ${PYSITELIB}/photologue/res/sample.jpg
+${PYSITELIB}/photologue/res/test_&quoting.jpg
 ${PYSITELIB}/photologue/res/test_landscape.jpg
 ${PYSITELIB}/photologue/res/test_portrait.jpg
 ${PYSITELIB}/photologue/res/test_square.jpg
+${PYSITELIB}/photologue/sitemaps.py
+${PYSITELIB}/photologue/sitemaps.pyc
+${PYSITELIB}/photologue/sitemaps.pyo
 ${PYSITELIB}/photologue/templates/photologue/gallery_archive.html
 ${PYSITELIB}/photologue/templates/photologue/gallery_archive_day.html
 ${PYSITELIB}/photologue/templates/photologue/gallery_archive_month.html
@@ -83,12 +115,21 @@ ${PYSITELIB}/photologue/tests/gallery.pyo
 ${PYSITELIB}/photologue/tests/helpers.py
 ${PYSITELIB}/photologue/tests/helpers.pyc
 ${PYSITELIB}/photologue/tests/helpers.pyo
+${PYSITELIB}/photologue/tests/mock_settings.py
+${PYSITELIB}/photologue/tests/mock_settings.pyc
+${PYSITELIB}/photologue/tests/mock_settings.pyo
 ${PYSITELIB}/photologue/tests/photo.py
 ${PYSITELIB}/photologue/tests/photo.pyc
 ${PYSITELIB}/photologue/tests/photo.pyo
 ${PYSITELIB}/photologue/tests/resize.py
 ${PYSITELIB}/photologue/tests/resize.pyc
 ${PYSITELIB}/photologue/tests/resize.pyo
+${PYSITELIB}/photologue/tests/sitemap.py
+${PYSITELIB}/photologue/tests/sitemap.pyc
+${PYSITELIB}/photologue/tests/sitemap.pyo
+${PYSITELIB}/photologue/tests/sitemap_urls.py
+${PYSITELIB}/photologue/tests/sitemap_urls.pyc
+${PYSITELIB}/photologue/tests/sitemap_urls.pyo
 ${PYSITELIB}/photologue/tests/views_gallery.py
 ${PYSITELIB}/photologue/tests/views_gallery.pyc
 ${PYSITELIB}/photologue/tests/views_gallery.pyo
