@@ -1,5 +1,5 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.1 2013/01/07 21:49:38 kleink Exp $
 
-SHA1 (WTForms-1.0.2.zip) = 7b022e417c3dac360301fa679d2fcecab6ed998b
-RMD160 (WTForms-1.0.2.zip) = b80fbfae2e8824580277db432615c4b7e35e0070
-Size (WTForms-1.0.2.zip) = 489353 bytes
+SHA1 (WTForms-1.0.3.zip) = f3128408e10375332aa41a8fa037cc48389c0d5e
+RMD160 (WTForms-1.0.3.zip) = 593614f5669982c18b2a36cf84bbb3803ecd32ff
+Size (WTForms-1.0.3.zip) = 326398 bytes
